# Task-2-Qt-HW

./: CMakeLists.txt  main.cpp
